<resources>
    <string name="app_name">E platform</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">New user</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm">Confirm</string>
    <string name="get_back_password">Forgot password</string>
    <string name="modify_password">Change password</string>
    <string name="click_again_exit">Press the return key to exit the application once again</string>
    <string name="waiting_for_my_approval">My approval</string>
    <string name="i_started">I initiated </string>
    <string name="cc_my">Cc my</string>
    <string name="no_data">Temporarily no data</string>
    <string name="approval_type">Approval type:</string>
    <string name="applicant"> Applicant:</string>
    <string name="already_approve">Has approval</string>
    <string name="my_approve">My approval</string>
    <string name="add_approved">Add the approval</string>
    <string name="approved">Approval</string>
    <string name="approval_total">Total reimbursement amount (RMB) :</string>
    <string name="approval_add_reimbursement_detail">Add</string>
    <string name="approval_reimbursement_detail">Reimbursement detail </string>
    <string name="approval_deleted">Delete</string>
    <string name="approval_reimbursement_money">Reimbursement amount (RMB) </string>
    <string name="approval_reimbursement_money_hint">Please enter a number (mandatory) </string>
    <string name="approval_reimbursement_type">Reimbursement categories</string>
    <string name="approval_money_detail">Cost detail</string>
    <string name="approval_reimbursement_type_hint"> Such as: purchasing fund budget (required), </string>
    <string name="approval_reimbursement_money_detail_hint"> Please enter cost detail description </string>
    <string name="approval_res_detail"> Item detail</string>
    <string name="approval_res_purpose">Item USES</string>
    <string name="approval_res_name">Item name </string>
    <string name="approval_res_count"> Item number</string>
    <string name="approval_res_receive_detail"> Recipients details</string>
    <string name="please_enter_a_groupname">PleaseEnterGroupName</string>
    <string name="approval_res_purpose_hint">Such as daily office (required)</string>
    <string name="approval_res_name_hint">Please input item name (required)</string>
    <string name="approval_res_count_hint">Please enter the number of</string>
    <string name="approval_res_receive_detail_hint">Please enter items recipients specifics</string>
    <string name="approval_is_not_null">Required fields cannot be empty</string>
    <string name="approval_application_content">Application content</string>
    <string name="approval_details">Approval details</string>
    <string name="approval_application_content_hint">(Required) Please enter the application content</string>
    <string name="approval_details_hint">Please enter the details (required) for examination and approval of</string>
    <string name="pubch_the_clock">Cell phone clock</string>
    <string name="welcome_punch_the_clock">Welcome to intelligent office every day</string>
    <string name="create_team">Create team</string>
    <string name="search_employee_no">Enter a employee number search</string>
    <string name="scan_friend">Scan friends</string>
    <string name="add_phone_contacts">Add contacts</string>
    <string name="my_qr_code">My qr code card</string>
    <string name="add_friends"> Add buddy</string>
    <string name="create_groud">Create groud</string>
    <string name="attendance_no"> Attendance</string>
    <string name="person_attendance"> Staff attendance</string>
    <string name="leave_early">Left early</string>
    <string name="absenteeism">Absenteeism</string>
    <string name="field_personnel"> Field</string>
    <string name="not_scheduling"> Not scheduling</string>
    <string name="missing_card">Deficiency card</string>
    <string name="add"> Add </string>
    <string name="provider"> Providers: </string>
    <string name="classic_model"> Classic template </string>
    <string name="custom"> Custom </string>
    <string name="approval_manager">Examination and approval administration</string>
    <string name="list_item_po_submit_date"> Submit time: </string>
    <string name="operate_see_the_more"> Read more </string>
    <string name="operate_compliance"> Compliance </string>
    <string name="operate_problem_number"> Problem number</string>
    <string name="operate_check_item"> Check items </string>
    <string name="operate_quality_defect"> Quality defects</string>
    <string name="operate_quality_name">Name</string>
    <string name="operate_quality_prompt">Prompt</string>
    <string name="operate_quality_commonly">General</string>
    <string name="operate_quality_serious">Serious</string>
    <string name="operate_quality_deadly"> Fatal</string>
    <string name="operate_quality_defect_rate">Defects</string>
    <string name="employee_number_or_mail">Work number or email</string>
    <string name="e_lead_mail_address">\@e-lead.cn</string>
    <string name="e_lead_login_failed">Login failed, please try again!</string>
    <string-array name="approval">
        <item>Ask for leave</item>
        <item>To submit an expense account</item>
        <item>On a business trip</item>
        <item>To go out</item>
        <item>Items of recipients</item>
        <item>Gm approval</item>
    </string-array>
    <string-array name="classic_model_name">
        <item>Department collaboration</item>
        <item>The project application</item>
        <item>Deposit application</item>
        <item>The order approval</item>
        <item>Items purchase </item>
        <item>The payment</item>
        <item>Purchasing</item>
        <item>News blackout</item>
        <item>Meeting approval</item>
        <item>Qualification using</item>
        <item>The contract approval</item>
        <item>Work for instructions</item>
        <item>Reported to the course</item>
        <item>Express to send</item>
        <item>The performance self-assessment</item>
        <item>Car application</item>
        <item>Refused to apply for the</item>
        <item>Leave</item>
        <item>Positive</item>
        <item>Work overtime</item>
        <item>Payment</item>
        <item>Recruitment</item>
    </string-array>
    <string-array name="classic_model_description">
        <item>Apply to a collaboration between departments</item>
        <item>when is suitable for the project application</item>
        <item>For employees on a business trip or errands...</item>
        <item> Used to order for examination and approval of class</item>
        <item> applicable to purchase company items</item>
        <item>Is suitable for the receipt to the customer when the examination and approval of</item>
        <item>For corporate office or of the materials needed to...</item>
        <item>Apply news information report</item>
        <item> Apply to hold important meeting agenda for examination and approval</item>
        <item>Provide all kinds of certificate (business license, etc.)...</item>
        <item>Apply to apply to draw up the contract after the examination and approval of</item>
        <item>To superior for instructions applicable to work</item>
        <item>For school teachers to between each other classes...</item>
        <item>Items send use record in the company..</item>
        <item>Report for monthly performance</item>
        <item>Apply to the use of the vehicle on business application</item>
        <item>Apply to the company seal</item>
        <item>Apply to leave for examination and approval</item>
        <item>Used for probation period staff employees positive...</item>
        <item>Apply to work overtime for approval</item>
        <item>Apply to payment for examination and approval</item>
        <item>Used in department of choose and employ persons needs to apply for</item>
    </string-array>
    <string name="approval_workover">My overtime</string>
    <string name="approval_starttime">Start time</string>
    <string name="approval_endtime"> End time </string>
    <string name="approval_workover_time"> Overtime hours </string>
    <string name="approval_write_workover_time">Please fill out the overtime hours (mandatory) </string>
    <string name="approval_isfadingjiari">Whether legal holiday </string>
    <string name="approval_choose">Please select </string>
    <string name="approval_choose_must">Please select (mandatory)</string>
    <string name="approval_yes">Is</string>
    <string name="approval_no"> No </string>
    <string name="approval_he_suan_fang_shi">Overtime accounting </string>
    <string name="approval_sheqing_tiaoxiu"> To apply for paid leave </string>
    <string name="approval_shenqing_jiaban_fei"> To apply for overtime </string>
    <string name="approval_workover_reasonwhy"> Overtime reason </string>
    <string name="approval_white_reasonwhy"> Please fill out the overtime reason </string>
    <string name="approval_my_contract"> My contract approval </string>
    <string name="approval_contract_code"> Contract number </string>
    <string name="approval_please_write_must"> Please enter (mandatory) </string>
    <string name="approval_our_name"> Our unit name </string>
    <string name="please_write"> Enter </string>
    <string name="approval_our_head"> Our head </string>
    <string name="approval_there_entrty_name"> The other unit name </string>
    <string name="approval_there_head_name"> Your director name </string>
    <string name="approval_contract_terms"> Contract terms </string>
    <string name="approval_content">Conten </string>
    <string name="approval_my_goaway"> My departure </string>
    <string name="approval_induction_date"> Entry date </string>
    <string name="approval_my_goaway_date">Departure date</string>
    <string name="approval_job">Just for </string>
    <string name="approval_please_write_job_must">Please fill in the subordinate position (mandatory) </string>
    <string name="approval_tranfser_peo">Transfer personnel </string>
    <string name="approval_please_write_transfer_must">Please fill out the transfer of personnel (mandatory) </string>
    <string name="approval_contact_start_time">Labor contract start time </string>
    <string name="approval_contact_end_time">Labor contract end time </string>
    <string name="approval_goaway_reason">Quit reason </string>
    <string name="my_nick">Name</string>
    <string name="my_group">My group</string>
    <string name="common_connect">CommonConnect</string>
    <string name="im_group_elead_name">上海易立德企业咨询有限公司</string>
    <string name="sure_of">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="choose_contact">ChooseContacts</string>
    <string name="logout">Logout</string>
    <string name="logout_hint">Logout will never clear the chat history, this account can be used on next login</string>
    <string name="search">Search</string>
    <string name="group_name">Group name</string>
    <string name="Group_chat_profile">Group profile</string>
    <string name="Whether_the_public">Is public</string>
    <string name="Open_group_members_invited">Allow members to invite</string>
    <string name="Group_of_Lord">The group owner:</string>
    <string name="Introduction">Brief:</string>
    <string name="To_join_the_chat">Join the group</string>
    <string name="my_friends">MyFriends</string>
    <string name="user_search">The user name search</string>
    <string name="my_qrcode">My qr code</string>
    <string name="scan_qrcode">Scan the qr code card</string>
    <string name="phone_contact">Mobile phone contact</string>
    <string name="invit_contact">To add or invite friends of mobile phone address book</string>
</resources>