<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:clickable="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/logout_hint"
        android:textColor="@color/fontcolors8"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_exit"
            style="@style/ErrorButtonStyle_No_Margin"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:onClick="logout"
            android:text="@string/logout"
            android:textSize="16dp" />

        <Button
            style="@style/CommitButtonStyle_No_Margin"
            android:layout_marginLeft="6dp"
            android:layout_weight="1"
            android:onClick="cancel"
            android:text="@string/cancel"
            android:textSize="16dp" />
    </LinearLayout>


</LinearLayout>
