<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:hyphenate="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pick_lin_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/qianlv">

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@drawable/tranpant_bg_selector"
            android:ellipsize="end"
            android:gravity="center"
            android:padding="@dimen/card_padding_Top"
            android:text="@string/cancel"
            android:textColor="@color/huyanlv"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:ellipsize="end"
            android:gravity="center"
            android:text="@string/choose_contact"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/sure"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/tranpant_bg_selector"
            android:ellipsize="end"
            android:gravity="center"
            android:padding="@dimen/card_padding_Top"
            android:text="@string/sure_of"
            android:textColor="@color/fontcolors10"
            android:textSize="14sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <cn.finalteam.mygallery.widget.HorizontalListView
            android:id="@+id/horizontallistview"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:scrollbars="none" />

        <EditText
            android:id="@+id/ed_search"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:background="@drawable/tranpant_bg_selector"
            android:ellipsize="start"
            android:gravity="center_vertical"
            android:hint="@string/search"
            android:paddingLeft="6dp"
            android:paddingRight="16dp"
            android:singleLine="true"
            android:textColor="@color/fontcolors7"
            android:textCursorDrawable="@color/fontcolors7"
            android:textSize="12sp" />
    </LinearLayout>

    <com.elead.views.MyScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/big_line_bg"
            android:orientation="vertical">


            <com.elead.views.SelectRotateRightLayout
                android:id="@+id/pick_lin_my_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                hyphenate:centerText="@string/my_group"
                hyphenate:leftImage="@drawable/my_group" />


            <com.elead.views.SelectRotateRightLayout
                android:id="@+id/pick_lin_my_conpany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                hyphenate:centerText="@string/im_group_elead_name"
                hyphenate:leftImage="@drawable/goujia" />

            <com.elead.views.AnimChangeLayout
                android:id="@+id/animchangelayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:animateLayoutChanges="true"
                android:background="@color/small_line_bg"
                android:orientation="vertical">

                <com.elead.views.SelectRotateRightLayout
                    android:id="@+id/pick_lin_my_friend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/lanlv"
                    hyphenate:centerText="@string/my_friends"
                    hyphenate:leftImage="@drawable/my_friend" />

                <com.elead.views.CustomListView
                    android:id="@+id/list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0.5dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:cacheColorHint="@android:color/transparent"
                    android:divider="@color/small_line_bg"
                    android:dividerHeight="0.5dp"
                    android:fastScrollEnabled="true"
                    android:listSelector="@color/transport"
                    android:scrollbars="none"
                    android:visibility="gone" />
            </com.elead.views.AnimChangeLayout>

            <com.elead.views.SelectRotateRightLayout
                android:id="@+id/pick_lin_common_used"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                hyphenate:centerText="@string/common_connect"
                hyphenate:leftImage="@drawable/changyong" />
        </LinearLayout>
    </com.elead.views.MyScrollView>


    <ListView
        android:id="@+id/lv_searchResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0.5dp"
        android:cacheColorHint="@color/transport"
        android:divider="@color/small_line_bg"
        android:dividerHeight="0.5dp"
        android:listSelector="@color/transport"
        android:scrollbars="none"
        android:visibility="gone" />
</LinearLayout>
